--- a/students/dunaieva_alona/20_rn-2/src/css/sections/_design.scss
+++ b/students/dunaieva_alona/20_rn-2/src/css/sections/_design.scss
@@ -1,6 +1,10 @@
 .design {
     margin-bottom: 70px;
 
+    @include media(md) {
+        margin-bottom: unset;
+    }
+
     &__overtext {
         line-height: 43px;
     }
