--- a/students/dunaieva_alona/20_rn-2/src/css/sections/_hero.scss
+++ b/students/dunaieva_alona/20_rn-2/src/css/sections/_hero.scss
@@ -1,6 +1,10 @@
 .hero {
     margin-bottom: 93px;
 
+    @include media(md) {
+        margin-bottom: unset;
+    }
+
     &__text {
         padding-bottom: 20px;
         font-size: 18px;
