--- a/students/dunaieva_alona/20_rn-2/src/css/_form.scss
+++ b/students/dunaieva_alona/20_rn-2/src/css/_form.scss
@@ -45,6 +45,10 @@
     flex-wrap: wrap;
     gap: 25px;
 
+    @include media(sm) {
+        justify-content: center;
+    }
+
     &__input {
         width: 100%;
         height: 50px;
