--- a/students/dunaieva_alona/20_rn-2/src/css/footer/_footer.scss
+++ b/students/dunaieva_alona/20_rn-2/src/css/footer/_footer.scss
@@ -1,6 +1,14 @@
 .footer {
     margin-top: 100px;
 
+    @include media(md) {
+        margin-top: 50px;
+    }
+
+    @include media(sm) {
+        text-align: center;
+    }
+
     .row {
         align-items: start;
     }
