--- a/students/dunaieva_alona/20_rn-2/src/css/sections/_managers.scss
+++ b/students/dunaieva_alona/20_rn-2/src/css/sections/_managers.scss
@@ -1,6 +1,10 @@
 .managers {
     margin-bottom: 70px;
 
+    @include media(md) {
+        margin-bottom: unset;
+    }
+
     &__overtext {
         @extend .design__overtext;
     }
