--- a/students/dunaieva_alona/20_rn-2/src/css/sections/_tools.scss
+++ b/students/dunaieva_alona/20_rn-2/src/css/sections/_tools.scss
@@ -1,6 +1,6 @@
 .tools {
 
-    background: url('../../images/tools/bg.svg') center bottom;
+    background: url('../images/tools/bg.svg') center bottom;
     background-size: cover;
     padding-bottom: 74px;
 
