--- a/students/tiselko_iryna/exam_module1/src/css/header/_menu.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/header/_menu.scss
@@ -1,32 +1,38 @@
-.logo {
-    font-size: 24px;
-    font-weight: 700;
-    letter-spacing: 2.4px;
-    text-transform: uppercase;
-    color: $white-color;
-
-    @include media (xxs) {
-        font-size: 20px;
-    }
-}
 
 .header {
-
-    // .header__logo
-    &__logo {
-        display: flex;
-        align-items: center;
-    }
 
     // .header__navblock
 
     &__navblock {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
         background-color: $dodger-blue;
-        position: relative;
     }
 }
 
 .navblock {
+
+    // .navblock__logo
+    &__logo {
+        font-size: 24px;
+        font-weight: 700;
+        letter-spacing: 2.4px;
+        text-transform: uppercase;
+        color: $white-color;
+    
+        @include media (xxs) {
+            font-size: 20px;
+        }
+    }
+
+    // .navblock__container
+    &__container{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding: 0;
+    }
 
     // .navblock__wrapper
 
@@ -57,19 +63,24 @@
         gap: 40px;
 
         @include media (md) {
-            position: absolute;
-            top: 105%;
-            right: -1%;
-            background-color: $dodger-blue;
-            z-index: 20;
-            justify-content: flex-start;
-            height: 100vh;
-            width: 75%;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
             display: flex;
             flex-direction: column;
-            padding-top: 100px;
-            transform: translateX(-180%);
-            transition: transform 0.3s ease-in-out;
+            justify-content: center;
+            align-items: center;
+            background-color: $dodger-blue;
+            transform: translateX(100%);
+            transition: transform .3s ease-in-out;
+            z-index: 30;
+
+            .navblock__menu-open-input:checked~& {
+                transform: translateX(0);
+            }
         }
     }
 }
@@ -82,7 +93,6 @@
         justify-content: center;
         align-items: center;
         border: 1px solid transparent;
-        z-index: 30;
 
         .navblock__menu-open-input:checked+& {
             .menu-open-label__span {
@@ -104,6 +114,7 @@
             position: relative;
             display: block;
             width: 90%;
+            border-radius: 40px;
             background-color: $white-color;
             height: 5px;
             transition: background-color .3s ease-in-out;
@@ -114,6 +125,7 @@
                 display: block;
                 width: 100%;
                 height: 100%;
+                border-radius: 40px;
                 background-color: $white-color;
                 position: absolute;
                 transition: all .3s ease-in-out;
@@ -130,7 +142,46 @@
     }
 }
 
+.menu-close-label {
+    @include media (md) {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid transparent;
+        margin-left: calc(50% - 26px);
+
+        .menu-open-label__span {
+            background-color: transparent;
+
+            &::before {
+                top: unset;
+                transform: rotate(45deg);
+            }
+
+            &::after {
+                bottom: unset;
+                transform: rotate(-45deg);
+            }
+        }
+    }
+}
+
+
 .menu {
+    // .menu__item
+
+    &__item {
+        @include media (md) {
+            &:not(:last-child){
+                text-align: center;
+                width: 300px;
+                border-bottom: 2px solid $white-color;
+            }
+        }
+    }
+
 
     // .menu__link
 
@@ -144,7 +195,7 @@
         text-transform: uppercase;
         text-decoration: none;
         color: $white-color;
-        padding: 10px;
+        padding: 17px;
 
         &:hover {
             font-weight: 600;
