--- a/students/tiselko_iryna/exam_module1/src/css/main/_grandspain1.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_grandspain1.scss
@@ -60,7 +60,8 @@
         margin: 220px 15px 120px 15px;
 
         @include media(xs) {
-            margin-top: 120px;
+            margin-top: 100px;
+            margin-bottom: 100px;
             display: flex;
             flex-direction: column;
             align-items: center;
