--- a/students/umienchuk_oksana/project_second_monticello/src/css/_global.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_global.scss
@@ -1,7 +1,8 @@
-@include font-face ('josefin-sans-v26-latin-300', 300);
-@include font-face ('josefin-sans-v26-latin-regular', 400);
-@include font-face ('josefin-sans-v26-latin-700', 700);
-@include font-face ('aleo-v12-latin-regular', 400, $font-sub-font);
+@include font-face ('montserrat-v25-latin-regular', 400);
+@include font-face ('montserrat-v25-latin-700', 700);
+@include font-face ('source-sans-3-v9-latin-regular', 400);
+@include font-face ('open-sans-v35-latin-regular', 400, $font-sub-first);
+@include font-face ('open-sans-v35-latin-italic', 400, $font-sub-first, italic);
 
 body {
     font-family: $main-font;
@@ -22,8 +23,6 @@ body {
         display: none;
     }
 }
-
-
 
 .sprite {
     position: fixed;
