--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_mounain-spain.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_mounain-spain.scss
@@ -1,5 +1,5 @@
 .mount-spain {
-    background-image: url(../images/sea-mountains.png);
+    background-image: url(../images/sea-mountains.jpg);
     background-size: cover;
     background-position: center center;
 
@@ -18,6 +18,10 @@
         @include media(md) {
             max-width: 100%;
             margin: 105px 0;
+        }
+
+        @include media(xs) {
+            margin: 55px 0;
         }
     }
 }
