--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_why-choose.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_why-choose.scss
@@ -6,7 +6,7 @@
 }
 
 .why-choose-us {
-    background-image: url(../images/castle-background.png);
+    background-image: url(../images/castle-background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
