--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/style.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/style.scss
@@ -5,5 +5,6 @@
 @import "./fonts";
 @import "./reset";
 @import "./global";
+@import "./header/header";
 @import "./main/main";
 @import "./footer/footer";
