add html structure

--- a/students/umienchuk_oksana/project_second_monticello/src/css/_btn.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_btn.scss
@@ -1,7 +1,7 @@
 .btn {
     display: inline-block;
     background-color: $color-btn;
-    color: $default-body-color;
+    color: $default-btn-color;
     display: inline-flex;
     align-items: center;
     text-decoration: none;
@@ -10,16 +10,16 @@
 
     &-primary {
         padding: 20px 32px;
-        height: $btn-height-primary;
-        @include fonts-type($font-sub-font, 16px, $font-weight-name, $line-height, $letter-spacing-btn, $text-transform-upper);
+        // height: $btn-height-primary;
+
     }
 
     &-secondary {
         border: 0;
         padding: 16px 24px;
-        height: $btn-height-secondary;
-        font-size: $font-size-small;
-        @include fonts-type($font-sub-font, $font-size-small, $font-weight-name, $line-height, $letter-spacing-menu, $text-transform-upper);
+        // height: $btn-height-secondary;
+        // font-size: $font-size-small;
+
 
         &:hover {
             text-decoration: underline;
