--- a/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
@@ -6,4 +6,10 @@
 @import "./global";
 @import "./btn";
 @import "./header/header";
-@import "./footer/footer";
+@import "./header/nav";
+@import "./main/projects";
+@import "./main/news";
+@import "./main/gallery";
+@import "./main/map";
+@import "./form";
+@import "./footer";
