--- a/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
@@ -11,5 +11,6 @@
 @import "./main/news";
 @import "./main/gallery";
 @import "./main/map";
+@import "./social";
 @import "./form";
 @import "./footer";
