--- a/students/hridina_anastasiia/Exam_project_1/src/css/main/_hero-block.scss
+++ b/students/hridina_anastasiia/Exam_project_1/src/css/main/_hero-block.scss
@@ -1,5 +1,5 @@
 .hero-block {
-    background-image: url(../images/bg_2.png);
+    background-image: url(../images/why_background.jpg);
     background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
@@ -11,6 +11,11 @@
 
     @include media(sm) {
         height: 100%;
+        background-position: 20% 50%;
+    }
+
+    @include media(xs) {
+        background-position: 15% 60%;
     }
 
 }
@@ -98,9 +103,24 @@
     cursor: pointer;
     transition: background-color .3s ease-in-out;
     white-space: nowrap;
+    position: relative;
+    z-index: 1;
+
+    &::before {
+        content: '';
+        position: absolute;
+        background-color: $dodgerbluedarker-color;
+        height: 48.2px;
+        clip-path: polygon(0 0, 40% 0%, 100% 100%, 100% 100%, 0 100%);
+        width: 95px;
+        right: 95.5px;
+        bottom: 0;
+        top: 0;
+        z-index: -1;
+    }
 
     &:hover {
-        background-color: $color-azureradiance;
+        background-color: $dodgerbluedarker-color;
     }
 
 }
@@ -113,6 +133,15 @@
         margin: auto;
         margin-top: 30px;
     }
+
+    @include media(xs) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 20px;
+        padding: 0;
+    }
+
 }
 
 .image {
@@ -120,10 +149,14 @@
     // .image__right
 
     &__right {
-        width: 60%;
+        aspect-ratio: 3/2;
         object-fit: cover;
         object-position: center;
         display: block;
+
+        @supports not (aspect-ratio: 3/2) {
+            height: 220px;
+        }
 
         &:first-child {
             margin-bottom: 15px;
@@ -141,20 +174,26 @@
             @include media(sm) {
                 margin-left: 20px;
             }
+
+            @include media(xs) {
+                margin-left: 0;
+            }
         }
 
 
         @include media(md) {
             width: 85%;
-            object-fit: cover;
         }
 
         @include media(sm) {
             width: 100%;
-            object-fit: cover;
         }
 
         @include media(xs) {
+            width: 100%;
+        }
+
+        @include media(xxs) {
             width: 100%;
         }
     }
@@ -178,10 +217,13 @@
         }
 
         @include media(sm) {
-            padding-top: 0;
-            padding-bottom: 10px;
-            display: flex;
+            padding-top: 5px;
+            padding-bottom: 15px;
             justify-content: center;
+        }
+
+        @include media(xxs) {
+            padding-top: 10px;
         }
     }
 }
@@ -195,26 +237,31 @@
     margin-top: 90px;
     margin-bottom: 0;
 
+    @include media(lg) {
+        gap: 150px;
+    }
+
     @include media(md) {
-        display: flex;
-        gap: 80px;
+        gap: 65px;
+        padding-left: 0;
     }
 
     @include media(sm) {
-        display: flex;
         justify-content: center;
         align-items: center;
         gap: 60px;
-        padding-left: 10px;
     }
 
     @include media(xs) {
-        gap: 30px;
+        gap: 22px;
         padding-left: 10px;
     }
 
     @include media(xxs) {
-        gap: 30px;
+        gap: 100px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -229,6 +276,10 @@
         position: relative;
         white-space: nowrap;
 
+        @include media(lg) {
+            font-size: 30px;
+        }
+
         @include media(md) {
             font-size: 30px;
         }
@@ -238,7 +289,8 @@
         }
 
         @include media(xxs) {
-            font-size: 15px;
+            font-size: 25px;
+            padding-bottom: 25px;
         }
 
         &:nth-child(-n+2) {
@@ -255,6 +307,10 @@
                 clip-path: ellipse(50% 50%);
                 opacity: .5;
 
+                @include media(lg) {
+                    left: 44%;
+                }
+
                 @include media(md) {
                     visibility: hidden;
                 }
@@ -266,9 +322,9 @@
         }
     }
 
-    // .links__svg
+    // .links_svg
 
-    &__svg {
+    &_svg {
         width: 50px;
         height: 50px;
         position: absolute;
@@ -278,6 +334,11 @@
         @include media(sm) {
             width: 30px;
             height: 30px;
+        }
+
+        @include media(xxs) {
+            width: 45px;
+            height: 45px;
         }
     }
 }
