--- a/students/hridina_anastasiia/Exam_project_1/src/css/main/_spain-block.scss
+++ b/students/hridina_anastasiia/Exam_project_1/src/css/main/_spain-block.scss
@@ -3,7 +3,7 @@
     // .spain__block
 
     &__block {
-        background-image: url(../images/bg_4.png);
+        background-image: url(../images/spain2_bg.jpg);
         height: 684px;
         background-position: center;
         background-size: cover;
@@ -26,10 +26,21 @@
             margin-top: 17%;
         }
 
+        @include media (sm) {
+            width: 70%;
+            margin: 0 auto;
+            margin-top: 18%;
+        }
+
         @include media(xs) {
-            width: 80%;
-            margin-left: 11%;
+            width: 100%;
+            margin-left: 0;
             margin-top: 25%;
+        }
+
+        @include media(xxs) {
+            width: 100%;
+            margin-left: 0;
         }
     }
 
