--- a/students/hridina_anastasiia/Exam_project_1/src/css/main/_travel-block.scss
+++ b/students/hridina_anastasiia/Exam_project_1/src/css/main/_travel-block.scss
@@ -16,17 +16,28 @@
             margin-top: 16%;
         }
 
+        @include media(sm) {
+            width: 70%;
+            margin: 0 auto;
+            margin-top: 18%;
+        }
+
         @include media(xs) {
-            width: 80%;
-            margin-left: 11%;
+            width: 100%;
+            margin-left: 0;
             margin-top: 25%;
+        }
+
+        @include media(xxs) {
+            width: 100%;
+            margin-left: 0;
         }
     }
 
     // .travel__block
 
     &__block {
-        background-image: url(../images/bg_3.png);
+        background-image: url(../images/spain1_bg.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -72,4 +83,17 @@
     text-transform: uppercase;
     display: inline-block;
     padding: 15px 40px;
+
+    &::before {
+        content: '';
+        position: absolute;
+        background-color: $dodgerbluedarker-color;
+        height: 50px;
+        clip-path: polygon(0 0, 40% 0%, 100% 100%, 100% 100%, 0 100%);
+        width: 95px;
+        right: 87px;
+        bottom: 0;
+        top: 0;
+        z-index: -1;
+    }
 }
