--- a/students/hridina_anastasiia/Exam_project_1/src/css/header/_header.scss
+++ b/students/hridina_anastasiia/Exam_project_1/src/css/header/_header.scss
@@ -147,8 +147,6 @@
         position: absolute;
         bottom: 0;
         padding-left: 15px;
-
-        @include media(lg) {}
     }
 }
 
@@ -184,6 +182,7 @@
         text-transform: uppercase;
         color: $white-color;
         margin-left: 230px;
+        margin-top: 26px;
 
         @include media(lg) {
             margin-left: 100px;
@@ -243,6 +242,7 @@
     align-items: center;
     gap: 30px;
     margin-right: 150px;
+    margin-top: 20px;
     position: relative;
 
     @include media(md) {
