--- a/students/hridina_anastasiia/Exam_project_1/src/css/main/_hero-block.scss
+++ b/students/hridina_anastasiia/Exam_project_1/src/css/main/_hero-block.scss
@@ -58,7 +58,7 @@
 
             @include media(sm) {
                 text-align: center;
-                padding-right: 0;
+                padding: 15px;
             }
         }
     }
@@ -126,11 +126,12 @@
 }
 
 .image-wrapper {
+
     @include media(sm) {
-        display: inline-flex;
+        display: flex;
         justify-content: center;
         align-items: center;
-        margin: auto;
+        margin: 0 auto;
         margin-top: 30px;
     }
 
@@ -138,8 +139,8 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        gap: 20px;
-        padding: 0;
+        gap: 25px;
+        padding: 20px;
     }
 
 }
@@ -190,11 +191,11 @@
         }
 
         @include media(xs) {
-            width: 100%;
+            width: 90%;
         }
 
         @include media(xxs) {
-            width: 100%;
+            width: 95%;
         }
     }
 
