--- a/students/umienchuk_oksana/project_second_monticello/src/css/_variables.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_variables.scss
@@ -89,6 +89,10 @@ $default-width: 1170px;
 // footer 
 // $footer-gap-social-icons: 32px;
 
+//social
+$social-gap: 20px;
+
+
 $breack-points: (
     "lg": 1200px,
     "md": 992px,
