--- a/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
@@ -3,6 +3,8 @@
 @import "./extend";
 @import "./mixins";
 @import "./reset";
+@import "../../node_modules/slick-carousel/slick/slick.css";
+@import "../../node_modules/slick-carousel/slick/slick-theme.css";
 @import "./global";
 @import "./btn";
 @import "./header/header";
