--- a/students/umienchuk_oksana/project_second_monticello/src/css/_global.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_global.scss
@@ -18,12 +18,12 @@ body {
 
 @include grid();
 
-.mobyle-only {
-    @include media-m(sm) {
-        display: none;
-    }
-}
-
-// .sprite {
-//     position: fixed;
+// .mobyle-only {
+//     @include media-m(sm) {
+//         display: none;
+//     }
 // }
+
+.sprite {
+    position: fixed;
+}
