add slider for header

--- a/students/umienchuk_oksana/project_second_monticello/src/css/_global.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_global.scss
@@ -10,6 +10,7 @@ body {
     font-size: $default-font-size;
     color: $default-body-color;
     font-weight: $default-font-weight;
+    margin: 0 auto;
 }
 
 .btn {
