--- a/students/umienchuk_oksana/project_second_monticello/src/css/header/_header.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/header/_header.scss
@@ -1,40 +1,87 @@
-.header {}
-
-.container {}
+.header {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    // background-image: url(../../images/header-hero.jpg);
+    background-image: linear-gradient(to right, rgba(85, 183, 255, 0.5), rgba(126, 90, 255, 0.5));
+}
 
 .slider {
+    height: 100%;
+    z-index: 1;
 
     // .slider__block
 
-    &__block {}
+    &__block {
+        position: relative;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    // .slider__img
+
+    &__img {
+        // background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    // .slider__text
+
+    &__text {
+        position: absolute;
+        z-index: 10;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 
     // .slider__title
 
-    &__title {}
+    &__title {
+        white-space: nowrap;
+        color: $header-title;
+        font-family: Montserrat;
+        font-size: 80px;
+        font-weight: 700;
+        letter-spacing: 8px;
+        margin: 0 0 20px;
+    }
+
+    &__sub-title {
+        white-space: nowrap;
+        color: $header-title;
+        font-family: Montserrat;
+        font-size: 44px;
+        font-weight: 700;
+        letter-spacing: 8px;
+        margin: 0 0 20px;
+    }
 
     // .slider__sub-text
 
-    &__sub-text {}
-
-    // .slider__sub-title
-
-    &__sub-title {}
+    &__sub-text {
+        color: $header-title;
+        font-family: Montserrat;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 5.4px;
+        text-transform: uppercase;
+    }
 }
 
-.anchor-down-click {}
-
-.steps {
-
-    // .steps__icon
-
-    &__icon {}
+.anchor-down-click {
+    position: absolute;
+    bottom: 4%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .icon-img {}
-
-.icon-blue {}
-
-
 
 /* Слайдер */
 .slick-slider {}
@@ -51,8 +98,8 @@
 }
 
 /* Лента слайдов */
-.slick-track {
-    display: flex;
+.slider .slick-track {
+    display: block;
 }
 
 /* Слайд */
@@ -71,24 +118,56 @@
 .slick-slide.slick-cloned {}
 
 /* Стрелка */
-.slick-arrow {}
+// .slider .slick-arrow {
+//     position: absolute;
+//     width: 100%;
+//     z-index: 10;
+// }
 
 /* Стрелка влево */
-.slick-arrow.slick-prev {}
+// .slider .slick-arrow.slick-prev {
+//     top: 0;
+// }
 
 /* Стрелка вправо */
-.slick-arrow.slick-next {}
+// .slider .slick-arrow.slick-next {
+//     bottom: 0;
+// }
 
 /* Стрелка не активная */
 .slick-arrow.slick-disabled {}
 
 /* Точки (булиты) */
-.slick-dots {}
+.slider .slick-dots {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    right: 40px;
+    top: 50%;
+    bottom: 50%;
+}
 
-.slick-dots li {}
+/* Список точок */
+.slider .slick-dots li {
+    list-style: none;
+    margin: 10px 0;
+}
 
-/* Активная точка */
-.slick-dots li.slick-active {}
+/* Елемент точки */
+.slider .slick-dots li button {
+    font-size: 0;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    border: 1px solid $color-white;
+    border-color: $color-white;
+    background-color: transparent;
+    padding: 0;
+}
 
-/* Элемент точки */
-.slick-dots li button {}
+/* Активна точка */
+.slider .slick-dots li.slick-active button {
+    background-color: $color-white;
+}
