--- a/students/umienchuk_oksana/project_second_monticello/src/css/_footer.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_footer.scss
@@ -1,1 +1,16 @@
-.footer {}
+.footer {
+    overflow-x: hidden;
+    width: 100%;
+}
+
+.map {
+    width: 100%;
+
+}
+
+.google-map {
+    width: 100%;
+    height: 600px;
+    /* Задайте высоту по вашим требованиям */
+    border: 0;
+}
