--- a/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/style.scss
@@ -9,10 +9,9 @@
 @import "./btn";
 @import "./header/header";
 @import "./header/nav";
-@import "./main/projects";
-@import "./main/news";
-@import "./main/gallery";
-@import "./main/map";
+@import "./projects";
+@import "./news";
+@import "./gallery";
 @import "./social";
 @import "./form";
 @import "./footer";
