--- a/students/umienchuk_oksana/project_second_monticello/src/css/header/_header.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/header/_header.scss
@@ -1,9 +1,8 @@
 .header {
     height: 100vh;
-    width: 100vw;
     position: relative;
-    // background-image: url(../../images/header-hero.jpg);
-    background-image: linear-gradient(to right, rgba(85, 183, 255, 0.5), rgba(126, 90, 255, 0.5));
+    background-image: url(../../images/header-hero.jpg);
+    // background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
 }
 
 .slider {
@@ -13,18 +12,17 @@
     // .slider__block
 
     &__block {
-        position: relative;
         height: 100vh;
+        position: relative;
         overflow: hidden;
     }
 
     // .slider__img
 
     &__img {
-        // background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
         object-fit: cover;
-        width: 100%;
         height: 100%;
+        opacity: .5;
     }
 
     // .slider__text
@@ -43,7 +41,6 @@
     &__title {
         white-space: nowrap;
         color: $header-title;
-        font-family: Montserrat;
         font-size: 80px;
         font-weight: 700;
         letter-spacing: 8px;
@@ -53,7 +50,6 @@
     &__sub-title {
         white-space: nowrap;
         color: $header-title;
-        font-family: Montserrat;
         font-size: 44px;
         font-weight: 700;
         letter-spacing: 8px;
@@ -64,11 +60,8 @@
 
     &__sub-text {
         color: $header-title;
-        font-family: Montserrat;
         font-size: 18px;
-        font-style: normal;
         font-weight: 400;
-        line-height: normal;
         letter-spacing: 5.4px;
         text-transform: uppercase;
     }
