--- a/students/savchak_marharyta/12_positioning_transforming/css/style.css
+++ b/students/savchak_marharyta/12_positioning_transforming/css/style.css
@@ -5,9 +5,19 @@ body {
 }
 
 .container {
-    max-width: 1195px;
+    width: 1200px;
     margin: 0 auto;
-    margin-bottom: 75px;
+    margin-bottom: 101px;
+    font-size: 28px;
+
+}
+
+.header {
+    padding-left: 5px;
+    padding-top: 5px;
+    background-color: #FFF;
+    z-index: 2;
+    position: relative;
 }
 
 .link-element {
@@ -18,31 +28,38 @@ body {
     font-size: 36px;
 }
 
+.slash {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 .nav__tab {
     font-size: 20px;
 }
 
 .nav__tab-wrapper {
-    padding-top: 18px;
+    padding-top: 5px;
+    position: fixed;
+    left: 431px;
 }
 
 .lang-change__text {
     font-family: Tourney;
-    font-size: 23px;
+    font-size: 24px;
 }
 
 .nav__lang-change {
     float: left;
     padding-right: 50px;
+    padding-top: 5px;
+    margin: 0;
+    position: fixed;
 }
 
-.nav__tab-wrapper {
-    float: left;
-    padding-right: 12px;
-}
 
 .logo-wrapper {
-    float: right;
+    position: fixed;
+    right: 332px;
 }
 
 .clear-fix::after {
@@ -53,31 +70,71 @@ body {
 
 .main {
     display: flex;
-    gap: 40px;
+    justify-content: space-between;
 }
+
 
 .menu {
     list-style-type: none;
-    padding: 0;
+    margin: 0;
+    padding-top: 39px;
+    padding-left: 10px;
+    position: sticky;
+    top: 120px;
+}
+
+.menu__item {
+    border-bottom: 1px solid #BDBDBD;
+    padding-bottom: 8px;
+    letter-spacing: 1.44px;
+}
+
+.menu__item:not(:first-of-type) {
+    padding-top: 68px;
 }
 
 .main__bg-img {
     position: absolute;
-    z-index: 0;
-    right: 210px;
+    z-index: -1;
+    right: 212px;
     top: 150px;
+    position: fixed;
 
 }
 
 .article {
-    z-index: 1;
+    padding-top: 61px;
+}
+
+.chapter {
+    padding-bottom: 95px;
+    padding-left: 16px;
 }
 
 .chapter__title {
-    text-transform: uppercase;
     font-size: 36px;
     font-family: Francois One;
     margin: 0;
+    display: block;
+    position: relative;
+    letter-spacing: 1.44px;
+}
+
+.chapter__title::before {
+    content: ' ';
+    width: 100px;
+    border-top: 8px solid #000;
+    position: absolute;
+    bottom: 68px;
+}
+
+.chapter__title::after {
+    content: 'Chapter 1';
+    font-family: PT Sans;
+    font-size: 18px;
+    position: relative;
+    bottom: 23px;
+    left: 9px;
 }
 
 .col-4 {
@@ -89,5 +146,38 @@ body {
 }
 
 .chapter__text {
-    font-size: 28px;
+    padding-top: 40px;
+    line-height: 48px;
+    margin: 0;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.chapter__list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.chapter__list_item::before {
+    content: '+ ';
+
+}
+
+.chapter__list-title {
+    margin: 0;
+    padding-top: 10px;
+}
+
+/* .chapter__list_item {
+    padding-top: 38px;
+} */
+
+.html-example {
+    background-color: #DADADA;
 }
