--- a/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/_news.scss
@@ -2,7 +2,9 @@
     position: relative;
     padding: 150px 0 170px;
     background-image: url(../images/news-bg.jpg);
-
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 
     // .news__title
 
@@ -29,41 +31,202 @@
     }
 }
 
-.news-slider {}
+
 
 .news-list {}
 
 .news-card {
-    display: flex;
-    flex-direction: column;
     width: 370px;
-    height: 514px;
-    background-color: aqua;
+    background-color: $color-white;
+
     // .news-card__img
 
-    &__img {}
+    &__img {
+        width: 100%;
 
-    // .news-card__title
-
-    &__title {}
+        &-container {
+            margin-bottom: 25px;
+        }
+    }
 
     // .news-card__text
 
-    &__text {}
+    &__text {
+        padding: 0 25px;
+    }
+
+    // .news-card__title
+
+    &__title {
+        @include ellipsis(2);
+        margin-bottom: 15px;
+        color: #2C4058;
+        font-size: 22px;
+        font-weight: 700;
+    }
+
+    // .news-card__sub-text
+
+    &__sub-text {
+        @include ellipsis(2);
+        margin-bottom: 39px;
+        color: #2C4058;
+        font-family: Open Sans;
+        font-size: 18px;
+        font-weight: 400;
+    }
 
     // .news-card__author
 
-    &__author {}
+    &__author {
+        display: flex;
+        align-items: center;
+        margin-bottom: 30px;
+    }
 
     // .news-card__author-img
 
-    &__author-img {}
+    &__author-img {
+        border-radius: 50%;
+    }
+
+    &__block {
+        margin: 0 0 0 20px;
+
+    }
 
     // .news-card__author-name
 
-    &__author-name {}
+
+    &__author-name {
+        margin: 0 0 6px;
+        color: #2C4058;
+        font-size: 18px;
+        font-weight: 400;
+        text-transform: uppercase;
+    }
 
     // .news-card__author-data
 
-    &__author-data {}
+    &__author-data {
+        margin: 0;
+        color: #55B7FF;
+        font-size: 14px;
+        font-weight: 400;
+    }
+}
+
+.news-card-img-container {}
+
+.news-slider {
+    position: relative;
+}
+
+/* Слайдер */
+.slick-slider {}
+
+/* Слайдер запущен */
+.slick-slider.slick-initialized {}
+
+/* Слайдер с точками */
+.slick-slider.slick-dotted {}
+
+/* Ограничивающая оболочка */
+.news-slider .slick-list {
+    overflow: hidden;
+}
+
+/* Лента слайдов */
+.news-slider .slick-track {
+    display: flex;
+    gap: 30px;
+}
+
+/* Слайд */
+.slick-slide {}
+
+/* Слайд активный (показывается) */
+.slick-slide.slick-active {}
+
+/* Слайд основной */
+.slick-slide.slick-current {}
+
+/* Слайд по центру */
+.slick-slide.slick-center {}
+
+/* Клонированный слайд */
+.slick-slide.slick-cloned {}
+
+/* Стрелка */
+.news-slider .slick-arrow {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    font-size: 0; //прибрати написи із кнопок
+    height: 43px;
+    width: 43px;
+    background-color: transparent;
+    border: transparent;
+    padding: 0;
+    padding: 0;
+}
+
+/* Стрелка влево */
+.news-slider .slick-arrow.slick-prev {
+    left: -60px;
+    bottom: 0;
+    background-image: url('../images/click-down.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    transform: rotate(90deg);
+
+}
+
+/* Стрелка вправо */
+.news-slider .slick-arrow.slick-next {
+    right: -60px;
+    background-image: url('../images/click-down.svg');
+    transform: rotate(-90deg);
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+/* Стрелка не активная */
+.slick-arrow.slick-disabled {}
+
+/* Точки (булиты) */
+.news-slider .slick-dots {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: -60px;
+    gap: 20px;
+    color: transparent;
+    padding: 0;
+}
+
+/* Список точок */
+.news-slider.slick-dots li {
+    list-style: none;
+
+}
+
+/* Елемент точки */
+.news-slider .slick-dots li button {
+    font-size: 0;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    border: 1px solid $color-white;
+    border-color: $color-white;
+    background-color: transparent;
+    padding: 0;
+}
+
+/* Активна точка */
+.news-slider .slick-dots li.slick-active button {
+    background-color: $color-white;
 }
