add img block for header

--- a/students/umienchuk_oksana/project_second_monticello/src/css/header/_header.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/header/_header.scss
@@ -23,9 +23,11 @@
     // .slider__img
 
     &__img {
+        display: block;
         object-fit: cover;
         height: 100%;
-        opacity: .5;
+        width: 100%;
+        opacity: .7;
     }
 
     // .slider__text
