add changes in slider

--- a/students/umienchuk_oksana/project_second_monticello/src/css/header/_nav.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/header/_nav.scss
@@ -1,1 +1,20 @@
+.nav {}
 
+.logo {}
+
+.menu-wrapper {
+    @include media-m(sm) {
+        display: none;
+    }
+}
+
+.menu {
+
+    // .menu__item
+
+    &__item {}
+}
+
+.menu-open-btn {}
+
+.only-mobile {}
