--- a/students/umienchuk_oksana/project_second_monticello/src/css/header/_header.scss
+++ b/students/umienchuk_oksana/project_second_monticello/src/css/header/_header.scss
@@ -1,74 +1,111 @@
-.header {
+.hero {
     height: 100vh;
-    position: relative;
-    background-image: url(../../images/header-hero.jpg);
+    // position: relative;
+    // background-image: url(../../images/header-hero.jpg);
     // background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    // background-repeat: no-repeat;
+    // background-position: center;
+    // background-size: cover;
 }
 
-.slider {
+.hero-slider {
     height: 100%;
-    z-index: 1;
 
     // .slider__block
 
     &__block {
         height: 100vh;
         position: relative;
-        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:nth-child(n+2) {
+            display: none;
+        }
+
+        .slick-initialized & {
+            &:nth-child(n+2) {
+                display: block;
+            }
+        }
+
+        &__container {
+            position: absolute;
+        }
+
+        &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            z-index: 2;
+            background-image: linear-gradient(to right, rgba(85, 183, 255, 0.7), rgba(126, 90, 255, 0.7));
+        }
+
+        // position: relative;
+        // overflow: hidden;
     }
 
     // .slider__img
 
     &__img {
-        display: block;
-        object-fit: cover;
-        height: 100%;
+        // display: block;
         width: 100%;
-        opacity: .7;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        object-fit: cover;
+        object-position: center;
+        z-index: 1;
+        height: 100vh;
+        // opacity: .7;
     }
 
     // .slider__text
 
     &__text {
-        position: absolute;
-        z-index: 10;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
+        // position: absolute;
+        // z-index: 10;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
+        // text-align: center;
     }
 
     // .slider__title
 
     &__title {
-        white-space: nowrap;
-        color: $header-title;
-        font-size: 80px;
-        font-weight: 700;
-        letter-spacing: 8px;
-        margin: 0 0 20px;
+        // white-space: nowrap;
+        // color: $header-title;
+        // font-size: 80px;
+        // font-weight: 700;
+        // letter-spacing: 8px;
+        // margin: 0 0 20px;
     }
 
     &__sub-title {
-        white-space: nowrap;
-        color: $header-title;
-        font-size: 44px;
-        font-weight: 700;
-        letter-spacing: 8px;
-        margin: 0 0 20px;
+        //     white-space: nowrap;
+        //     color: $header-title;
+        //     font-size: 44px;
+        //     font-weight: 700;
+        //     letter-spacing: 8px;
+        //     margin: 0 0 20px;
     }
 
     // .slider__sub-text
 
     &__sub-text {
-        color: $header-title;
-        font-size: 18px;
-        font-weight: 400;
-        letter-spacing: 5.4px;
-        text-transform: uppercase;
+        // color: $header-title;
+        // font-size: 18px;
+        // font-weight: 400;
+        // letter-spacing: 5.4px;
+        // text-transform: uppercase;
     }
 }
 
@@ -96,7 +133,7 @@
 }
 
 /* Лента слайдов */
-.slider .slick-track {
+.hero-slider .slick-track {
     display: block;
 }
 
@@ -136,25 +173,21 @@
 .slick-arrow.slick-disabled {}
 
 /* Точки (булиты) */
-.slider .slick-dots {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: absolute;
-    right: 40px;
+.hero-slider .slick-dots {
+    bottom: unset;
+    width: auto;
     top: 50%;
-    bottom: 50%;
+
 }
 
 /* Список точок */
-.slider .slick-dots li {
+.hero-slider .slick-dots li {
     list-style: none;
     margin: 10px 0;
 }
 
 /* Елемент точки */
-.slider .slick-dots li button {
+.hero-slider .slick-dots li button {
     font-size: 0;
     height: 10px;
     width: 10px;
@@ -166,6 +199,8 @@
 }
 
 /* Активна точка */
-.slider .slick-dots li.slick-active button {
+.hero-slider .slick-dots li.slick-active button {
     background-color: $color-white;
 }
+
+.slick-slide {}
